Changing a lot of stuff. Many things inside this version will be broken at the moment.

--- a/x360ce.App/app.config
+++ b/x360ce.App/app.config
@@ -13,6 +13,12 @@
       <setting name="MinimizeToTray" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="ExcludeSupplementalDevices" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ExcludeVirualDevices" serializeAs="String">
+        <value>False</value>
+      </setting>
     </x360ce.App.Properties.Settings>
   </userSettings>
 </configuration>
