--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -104,6 +104,12 @@
           </conditions>
           <action type="Redirect" url="http://www.x360ce.com/{R:1}" redirectType="Permanent" />
         </rule>
+        <rule name="Redirect" stopProcessing="true">
+          <match url="^Redirect/(.*)" />
+          <conditions logicalGrouping="MatchAll">
+          </conditions>
+          <action type="Redirect" url="http://{R:1}" redirectType="Permanent" />
+        </rule>
         <!--<rule name="To https://github.com/x360ce/x360ce" stopProcessing="true">
           <match url="^$" />
           <conditions logicalGrouping="MatchAll">
