Web login updates

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -10,9 +10,9 @@
 		<add key="Security_Administrators" value="" />
 		<add key="Security_PowerUsers" value="" />
 		<add key="Security_LoginRememberMinutes" value="10080" />
-		<add key="AllowUsersToResetPassword" value="False" />
-		<add key="AllowUsersToSignUp" value="True" />
-		<add key="AllowUsersToLogin" value="False" />
+		<add key="Security_AllowUsersToResetPassword" value="False" />
+		<add key="Security_AllowUsersToSignUp" value="True" />
+		<add key="Security_AllowUsersToLogin" value="False" />
 	</appSettings>
   <!-- Allow Authorization -->
   <location path="Security/Admin">
