Web Validation controls updated.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -169,6 +169,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="JocysCom\Security\Data\User.cs" />
+    <Compile Include="JocysCom\Security\ValidationField.cs" />
     <Compile Include="JocysCom\Security\Encryption.cs" />
     <Compile Include="JocysCom\Security\Helper.cs" />
     <Compile Include="JocysCom\Security\RoleQueryName.cs" />
