--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -13,6 +13,8 @@
 		<add key="Security_AllowUsersToResetPassword" value="False" />
 		<add key="Security_AllowUsersToSignUp" value="True" />
 		<add key="Security_AllowUsersToLogin" value="False" />
+		<add key="Security_RequiredFields" value="UserName,Password,Email,Terms" />
+		<add key="Security_OptionalFields" value="FirstName,LastName" />
 	</appSettings>
   <!-- Allow Authorization -->
   <location path="Security/Admin">
@@ -126,6 +128,6 @@
   </system.webServer>
   <connectionStrings>
     <add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SecurityEntities" connectionString="metadata=res://*/Security.Data.SecurityModel.csdl|res://*/Security.Data.SecurityModel.ssdl|res://*/Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+		<add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
