--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -158,6 +158,14 @@
       <DependentUpon>DeviceDetectorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="JocysCom\IO\DeviceInfo.cs" />
+    <Compile Include="JocysCom\Resources\DataPriority.cs" />
+    <Compile Include="JocysCom\Resources\Data\ResourcesModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResourcesModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="JocysCom\Resources\Data\Setting.cs" />
+    <Compile Include="JocysCom\Resources\ResourceSection.cs" />
     <Compile Include="JocysCom\Security\BuildInRoles.cs" />
     <Compile Include="JocysCom\Security\BuiltInUsers.cs" />
     <Compile Include="JocysCom\Security\Check.cs" />
@@ -243,6 +251,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <EntityDeploy Include="JocysCom\Resources\Data\ResourcesModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ResourcesModel.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>JocysCom.ClassLibrary.Resources.Data</CustomToolNamespace>
+    </EntityDeploy>
+    <None Include="JocysCom\Resources\Data\ResourcesModel.edmx.diagram">
+      <DependentUpon>ResourcesModel.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
