Web Validation controls updated.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -9,8 +9,9 @@
     <add key="OverridePrograms" value="~/Files/x360ce_Games.xml" />
 		<add key="Security_Administrators" value="" />
 		<add key="Security_PowerUsers" value="" />
+		<add key="Security_DefaultRole" value="x360ceUsers" />
 		<add key="Security_LoginRememberMinutes" value="10080" />
-		<add key="Security_AllowUsersToResetPassword" value="False" />
+		<add key="Security_AllowUsersToResetPassword" value="True" />
 		<add key="Security_AllowUsersToSignUp" value="True" />
 		<add key="Security_AllowUsersToLogin" value="False" />
 		<add key="Security_RequiredFields" value="UserName,Password,Email,Terms" />
@@ -55,7 +56,7 @@
       <!-- http://msdn2.microsoft.com/en-us/library/system.web.security.sqlmembershipprovider_properties.aspx -->
       <providers>
         <clear />
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="DefaultConnectionString" passwordFormat="Encrypted" enablePasswordRetrieval="true" enablePasswordReset="true" maxInvalidPasswordAttempts="64" passwordAttemptWindow="128" minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" applicationName="/" />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="JocysCom.WebSites.Engine.Properties.Settings.DefaultConnectionString" passwordFormat="Encrypted" enablePasswordRetrieval="true" enablePasswordReset="true" maxInvalidPasswordAttempts="64" passwordAttemptWindow="128" minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" applicationName="/" />
       </providers>
     </membership>
     <pages>
@@ -127,7 +128,8 @@
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <connectionStrings>
-    <add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="JocysCom.WebSites.Engine.Properties.Settings.DefaultConnectionString" connectionString="Data Source=localhost;Initial Catalog=x360ce;User ID=x360ceAdmin;Password=localdev;" providerName="System.Data.SqlClient" />
+		<add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 		<add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 </configuration>
