Collections class added

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -137,6 +137,7 @@
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="JocysCom\ClassTools\EnumTools.cs" />
+    <Compile Include="JocysCom\Collections\KeyValue.cs" />
     <Compile Include="JocysCom\Common\DataContextFactoryT.cs" />
     <Compile Include="JocysCom\Common\GuidEnum.cs" />
     <Compile Include="JocysCom\Common\GuidValueAttribute.cs" />
